More robust precision switching

--- a/analysis/basic_functionality.ipynb
+++ b/analysis/basic_functionality.ipynb
@@ -89,8 +89,8 @@
     "trees = tree_list.get_trees()\n",
     "pack_vis.visualize_tree_list(tree_list)\n",
     "sol = kgs.SolutionCollection()\n",
-    "sol.xyt = cp.array([tree_list.xyt], dtype=cp.float32)\n",
-    "sol.h = cp.array([[0,0,0]], dtype=cp.float32)\n",
+    "sol.xyt = cp.array([tree_list.xyt], dtype=kgs.dtype_cp)\n",
+    "sol.h = cp.array([[0,0,0]], dtype=kgs.dtype_cp)\n",
     "pack_cost.CollisionCostSeparation().compute_cost_ref(sol)[0],pack_cost.CollisionCostSeparation().compute_cost_allocate(sol)[0]"
    ]
   },
