--- a/analysis/streams.ipynb
+++ b/analysis/streams.ipynb
@@ -62,12 +62,12 @@
     "n_trees = 200\n",
     "xyt = np.random.default_rng(seed=52).uniform(-0.5, 0.5, size=(n_ensembles, n_trees, 3))\n",
     "xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "xyt = np.array(xyt, dtype=np.float32)\n",
-    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=np.float32)\n",
+    "xyt = np.array(xyt, dtype=kgs.dtype_np)\n",
+    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=kgs.dtype_np)\n",
     "h = h[0]\n",
     "sol = kgs.SolutionCollectionSquare()\n",
-    "sol.xyt = cp.array(xyt, dtype=cp.float32)\n",
-    "sol.h = cp.array(h, dtype=cp.float32)\n",
+    "sol.xyt = cp.array(xyt, dtype=kgs.dtype_cp)\n",
+    "sol.h = cp.array(h, dtype=kgs.dtype_cp)\n",
     "print(sol.xyt.shape, sol.h.shape)\n",
     "sol.check_constraints()\n",
     "N=4\n",
