--- a/analysis/test_cuda.ipynb
+++ b/analysis/test_cuda.ipynb
@@ -29,7 +29,7 @@
     "        a = increment_by_one(a)\n",
     "    return a\n",
     "\n",
-    "base = cp.float64(1.)\n",
+    "base = kgs.dtype_cp(1.)\n",
     "increment_by_one(base), increment_by_many(base, 10)"
    ]
   },
@@ -116,19 +116,19 @@
     "# ---- Python helper wrappers ----\n",
     "\n",
     "def increment_by_one_gpu(x):\n",
-    "    a = cp.asarray(x, dtype=cp.float64)\n",
+    "    a = cp.asarray(x, dtype=kgs.dtype_cp)\n",
     "    increment_by_one_kernel((1,), (1,), (a,))\n",
     "    return a\n",
     "\n",
     "def increment_by_many_gpu(x, N):\n",
-    "    a = cp.asarray(x, dtype=cp.float64)\n",
+    "    a = cp.asarray(x, dtype=kgs.dtype_cp)\n",
     "    increment_by_many_kernel((1,), (1,), (a, cp.int32(N)))\n",
     "    return a\n",
     "\n",
     "\n",
     "# Test\n",
     "if __name__ == \"__main__\":\n",
-    "    base = cp.float64(1.0)\n",
+    "    base = kgs.dtype_cp(1.0)\n",
     "\n",
     "    print(\"one:\",   increment_by_one_gpu(base).item())      # 2.0\n",
     "    print(\"many:\",  increment_by_many_gpu(base, 10).item()) # 11.0"
