--- a/analysis/test_genetic_diversity.ipynb
+++ b/analysis/test_genetic_diversity.ipynb
@@ -79,12 +79,12 @@
    "source": [
     "N_trees = 6\n",
     "np.random.seed(42)\n",
-    "ref = np.random.uniform(-1,1,size=(N_trees,3)).astype(np.float32)\n",
+    "ref = np.random.uniform(-1,1,size=(N_trees,3)).astype(kgs.dtype_np)\n",
     "ref[:,2] = np.random.uniform(-np.pi, np.pi, size=N_trees)\n",
     "N_pop = 4\n",
     "pop = np.tile(ref, (N_pop,1,1))\n",
-    "pop_gpu = cp.array(pop, dtype=cp.float32)\n",
-    "ref_gpu = cp.array(ref, dtype=cp.float32)\n",
+    "pop_gpu = cp.array(pop, dtype=kgs.dtype_cp)\n",
+    "ref_gpu = cp.array(ref, dtype=kgs.dtype_cp)\n",
     "d = pack_ga.compute_genetic_diversity(pop_gpu, ref_gpu)\n",
     "print('Distances (should be ~0):', d.get())"
    ]
@@ -154,7 +154,7 @@
     "\n",
     "# prepare transforms\n",
     "transformed = [ref, rotate_xyt(ref, np.pi/2), rotate_xyt(ref, np.pi), rotate_xyt(ref, 3*np.pi/2), mirror_xyt(ref), rotate_xyt(mirror_xyt(ref), np.pi/2)]\n",
-    "pop_t = np.stack(transformed, axis=0).astype(np.float32)\n",
+    "pop_t = np.stack(transformed, axis=0).astype(kgs.dtype_np)\n",
     "d2 = pack_ga.compute_genetic_diversity(cp.array(pop_t), ref_gpu)\n",
     "print('Symmetry distances (should be ~0):', d2.get())"
    ]
@@ -220,7 +220,7 @@
    "source": [
     "np.random.seed(123)\n",
     "N_pop = 5\n",
-    "pop_perm = np.zeros((N_pop, N_trees, 3), dtype=np.float32)\n",
+    "pop_perm = np.zeros((N_pop, N_trees, 3), dtype=kgs.dtype_np)\n",
     "for i in range(N_pop):\n",
     "    p = np.random.permutation(N_trees)\n",
     "    pop_perm[i] = ref[p]\n",
@@ -257,7 +257,7 @@
    "source": [
     "np.random.seed(999)\n",
     "N_pop = 8\n",
-    "pop_rand = np.random.uniform(-2,2,size=(N_pop, N_trees, 3)).astype(np.float32)\n",
+    "pop_rand = np.random.uniform(-2,2,size=(N_pop, N_trees, 3)).astype(kgs.dtype_np)\n",
     "pop_rand[:,:,2] = np.random.uniform(-np.pi, np.pi, size=(N_pop,N_trees))\n",
     "d4 = pack_ga.compute_genetic_diversity(cp.array(pop_rand), ref_gpu)\n",
     "print('Random distances:', d4.get())\n",
@@ -291,7 +291,7 @@
    ],
    "source": [
     "noise_levels = np.linspace(0,0.6,12)\n",
-    "pop_noise = np.zeros((len(noise_levels), N_trees, 3), dtype=np.float32)\n",
+    "pop_noise = np.zeros((len(noise_levels), N_trees, 3), dtype=kgs.dtype_np)\n",
     "np.random.seed(42)\n",
     "for i, n in enumerate(noise_levels):\n",
     "    cfg = ref.copy()\n",
@@ -333,9 +333,9 @@
     "N_trees_large = 20\n",
     "N_pop_large = 30\n",
     "np.random.seed(1)\n",
-    "ref_large = np.random.uniform(-3,3,size=(N_trees_large,3)).astype(np.float32)\n",
+    "ref_large = np.random.uniform(-3,3,size=(N_trees_large,3)).astype(kgs.dtype_np)\n",
     "ref_large[:,2] = np.random.uniform(-np.pi, np.pi, size=N_trees_large)\n",
-    "pop_large = np.zeros((N_pop_large, N_trees_large,3), dtype=np.float32)\n",
+    "pop_large = np.zeros((N_pop_large, N_trees_large,3), dtype=kgs.dtype_np)\n",
     "for i in range(N_pop_large):\n",
     "    pop_large[i] = ref_large.copy()\n",
     "    pop_large[i,:,:2] += np.random.normal(0, i*0.02, size=(N_trees_large,2))\n",
