--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -76,8 +76,8 @@
     "        size_setup_scaled = self.size_setup * np.sqrt(self.n_trees)\n",
     "        xyt = np.random.default_rng(seed=self.seed).uniform(-0.5, 0.5, size=(self.n_ensembles, self.n_trees, 3))\n",
     "        xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "        xyt = np.array(xyt, dtype=np.float32)\n",
-    "        h = np.array([[2*size_setup_scaled,0,0]]*self.n_ensembles, dtype=np.float32)\n",
+    "        xyt = np.array(xyt, dtype=kgs.dtype_np)\n",
+    "        h = np.array([[2*size_setup_scaled,0,0]]*self.n_ensembles, dtype=kgs.dtype_np)\n",
     "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
     "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
     "                                             pack_cost.CollisionCostSeparation(self.scaling_overlap)])\n",
@@ -102,17 +102,17 @@
     "        h = cp.array(h)\n",
     "        \n",
     "        # Preallocate gradient arrays\n",
-    "        total_cost = cp.zeros(self.n_ensembles, dtype=cp.float32)\n",
+    "        total_cost = cp.zeros(self.n_ensembles, dtype=kgs.dtype_cp)\n",
     "        total_grad = cp.zeros_like(xyt)\n",
     "        bound_grad = cp.zeros_like(h)\n",
     "\n",
-    "        t_total = np.float32(0.)\n",
-    "        dt = np.float32(self.dt)\n",
+    "        t_total = kgs.dtype_np(0.)\n",
+    "        dt = kgs.dtype_np(self.dt)\n",
     "        phase = 'init'\n",
-    "        t_this_phase = np.float32(0.)\n",
-    "        t_last_plot = np.float32(0.)\n",
+    "        t_this_phase = kgs.dtype_np(0.)\n",
+    "        t_last_plot = kgs.dtype_np(0.)\n",
     "        rounds_done = 0\n",
-    "        self.sizes = np.zeros((self.n_ensembles, self.n_rounds), dtype=np.float32)\n",
+    "        self.sizes = np.zeros((self.n_ensembles, self.n_rounds), dtype=kgs.dtype_np)\n",
     "        while True:\n",
     "            if phase == 'compact':\n",
     "                frac = t_this_phase / self.duration_compact\n",
@@ -218,12 +218,12 @@
     "n_trees = 40\n",
     "xyt = np.random.default_rng(seed=52).uniform(-0.5, 0.5, size=(n_ensembles, n_trees, 3))\n",
     "xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "xyt = np.array(xyt, dtype=np.float32)\n",
-    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=np.float32)\n",
+    "xyt = np.array(xyt, dtype=kgs.dtype_np)\n",
+    "h = np.array([[[2*size_setup_scaled,0.,0.]]*n_ensembles], dtype=kgs.dtype_np)\n",
     "h = h[0]\n",
     "sol = kgs.SolutionCollection()\n",
-    "sol.xyt = cp.array(xyt, dtype=cp.float32)\n",
-    "sol.h = cp.array(h, dtype=cp.float32)\n",
+    "sol.xyt = cp.array(xyt, dtype=kgs.dtype_cp)\n",
+    "sol.h = cp.array(h, dtype=kgs.dtype_cp)\n",
     "print(sol.xyt.shape, sol.h.shape)\n",
     "sol.check_constraints()"
    ]
