--- a/analysis/dynamics2.ipynb
+++ b/analysis/dynamics2.ipynb
@@ -88,8 +88,8 @@
     "        size_setup_scaled = self.size_setup * np.sqrt(self.n_trees)\n",
     "        xyt = np.random.default_rng(seed=self.seed).uniform(-0.5, 0.5, size=(self.n_ensembles, self.n_trees, 3))\n",
     "        xyt = xyt * [[[size_setup_scaled, size_setup_scaled, np.pi]]]\n",
-    "        xyt = np.array(xyt, dtype=np.float32)\n",
-    "        h = np.array([[2*size_setup_scaled]*self.n_ensembles], dtype=np.float32).T\n",
+    "        xyt = np.array(xyt, dtype=kgs.dtype_np)\n",
+    "        h = np.array([[2*size_setup_scaled]*self.n_ensembles], dtype=kgs.dtype_np).T\n",
     "        cost = pack_cost.CostCompound(costs=[pack_cost.AreaCost(scaling=0.),\n",
     "                                             pack_cost.BoundaryDistanceCost(scaling=self.scaling_boundary), \n",
     "                                             pack_cost.CollisionCostOverlappingArea(self.scaling_overlap)])\n",
@@ -111,13 +111,13 @@
     "        xyt = cp.array(xyt)\n",
     "        h = cp.array(h)\n",
     "\n",
-    "        t_total = np.float32(0.)\n",
-    "        dt = np.float32(self.dt)\n",
+    "        t_total = kgs.dtype_np(0.)\n",
+    "        dt = kgs.dtype_np(self.dt)\n",
     "        phase = 'init'\n",
-    "        t_this_phase = np.float32(0.)\n",
-    "        t_last_plot = np.float32(0.)\n",
+    "        t_this_phase = kgs.dtype_np(0.)\n",
+    "        t_last_plot = kgs.dtype_np(0.)\n",
     "        rounds_done = 0\n",
-    "        self.sizes = np.zeros((self.n_ensembles, self.n_rounds), dtype=np.float32)\n",
+    "        self.sizes = np.zeros((self.n_ensembles, self.n_rounds), dtype=kgs.dtype_np)\n",
     "        time_start = time.time()\n",
     "        velocity_xyt = cp.zeros_like(xyt)\n",
     "        velocity_h = cp.zeros_like(h)\n",
