--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x74b58a7992c0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7412528655c0>\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -132,8 +132,8 @@
       "[5.056422950038268]\n",
       "[0.14129901622533805]\n",
       "[0.14129901622533805]\n",
-      "[3.3175967103389583]\n",
-      "[3.3175967103389583]\n",
+      "[3.9433940660198905]\n",
+      "[3.9433940660198914]\n",
       "  Vectorized check for CollisionCostSeparation\n",
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
@@ -142,7 +142,7 @@
       "  Vectorized check for CollisionCostSeparation\n",
       "[[ 0.83333333  1.25        1.04719755]\n",
       " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.14129902 3.31759671]\n",
+      "[0.14129902 3.94339407]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing BoundaryDistanceCost\n",
@@ -174,8 +174,8 @@
       "[2.635436698619012]\n",
       "[0.03965316292449558]\n",
       "[0.03965316292449557]\n",
-      "[1.606660921382724]\n",
-      "[1.6066609213827237]\n",
+      "[1.8148139928048543]\n",
+      "[1.814813992804854]\n",
       "  Vectorized check for CollisionCostOverlappingArea\n",
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
@@ -184,7 +184,7 @@
       "  Vectorized check for CollisionCostOverlappingArea\n",
       "[[ 0.83333333  1.25        1.04719755]\n",
       " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[0.03965316 1.60666092]\n",
+      "[0.03965316 1.81481399]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "\n",
       "Testing CostCompound\n",
@@ -194,8 +194,8 @@
       "[7.51692688501148]\n",
       "[1.3955543982807868]\n",
       "[1.3955543982807868]\n",
-      "[1.220806462003885]\n",
-      "[1.220806462003885]\n",
+      "[1.408545668708165]\n",
+      "[1.408545668708165]\n",
       "  Vectorized check for CostCompound\n",
       "[[ 0.5   0.2   0.4 ]\n",
       " [ 2.   -0.1  -0.15]]\n",
@@ -204,7 +204,7 @@
       "  Vectorized check for CostCompound\n",
       "[[ 0.83333333  1.25        1.04719755]\n",
       " [-0.41666667  0.41666667  1.04719755]]\n",
-      "[1.3955544  1.22080646]\n",
+      "[1.3955544  1.40854567]\n",
       "  ✓ Vectorized results exactly match individual calls\n",
       "All tests passed.\n"
      ]
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
