Remove stray file

--- a/analysis/benchmark.ipynb
+++ b/analysis/benchmark.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6c9bf861-c4d7-492e-8c91-bc716358e29e",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
     "            #display(fig)\n",
     "            #clear_output(wait=True)\n",
     "\n",
-    "        sol = kgs.SolutionCollection()\n",
+    "        sol = kgs.SolutionCollectionSquare()\n",
     "        xyt = cp.array(xyt)\n",
     "        h = cp.array(h)\n",
     "        \n",
@@ -162,19 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cbd9d485",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 14.8 s, sys: 365 ms, total: 15.2 s\n",
-      "Wall time: 15.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "kgs.profiling=False\n",
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9f10cc48",
    "metadata": {},
    "outputs": [
@@ -230,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1844eb16",
    "metadata": {},
    "outputs": [
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3f67fac4",
    "metadata": {},
    "outputs": [
