--- a/analysis/temp.ipynb
+++ b/analysis/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4106fdd4",
    "metadata": {},
    "outputs": [
@@ -11,130 +11,7 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "======================================================================\n",
-      "OVERLAP KERNEL ATTRIBUTES\n",
-      "======================================================================\n",
-      "  num_regs             = 122\n",
-      "  local_size_bytes     = 1824  # per-thread stack/local\n",
-      "  shared_size_bytes    = 0\n",
-      "  max_threads_per_block= 512\n",
-      "\n",
-      "======================================================================\n",
-      "DEVICE PROPERTIES\n",
-      "======================================================================\n",
-      "  name                       = NVIDIA GeForce RTX 4070 Ti\n",
-      "  multiprocessor_count       = 60\n",
-      "  maxThreadsPerBlock         = 1024\n",
-      "  maxThreadsPerSM            = 1536\n",
-      "  maxBlocksPerSM             = 24\n",
-      "  regsPerSM                  = 65536\n",
-      "  warpSize                   = 32\n",
-      "\n",
-      "======================================================================\n",
-      "OCCUPANCY ANALYSIS\n",
-      "======================================================================\n",
-      "\n",
-      "Per-thread resources:\n",
-      "  Registers: 122\n",
-      "  Local memory: 1824 bytes\n",
-      "\n",
-      "Threads/Block   Blocks/SM       Active Threads/SM    Limiting Factor\n",
-      "--------------------------------------------------------------------------------\n",
-      "20              24              480                  HW block limit\n",
-      "40              13              520                  registers\n",
-      "80              6               480                  registers\n",
-      "128             4               512                  registers\n",
-      "256             2               512                  registers\n",
-      "512             1               512                  registers\n",
-      "1024            0               0                    registers\n",
-      "\n",
-      "======================================================================\n",
-      "ACTUAL USAGE IN overlap_multi_ensemble\n",
-      "======================================================================\n",
-      "\n",
-      "Configuration: 5 trees/ensemble × 4 threads/tree = 20 threads/block\n",
-      "\n",
-      "Per-block resource usage:\n",
-      "  Registers: 2440 (3.7% of SM)\n",
-      "  Local memory: 36,480 bytes (35.6 KB)\n",
-      "\n",
-      "Occupancy limits:\n",
-      "  Blocks limited by registers: 26\n",
-      "  Blocks limited by threads: 76\n",
-      "  Blocks limited by HW: 24\n",
-      "  ACTUAL max blocks per SM: 24\n",
-      "  ACTUAL active threads per SM: 480\n",
-      "  Occupancy: 31.2%\n",
-      "\n",
-      "======================================================================\n",
-      "CONCLUSION\n",
-      "======================================================================\n",
-      "✓ GPU SHOULD support 24 concurrent blocks per SM\n",
-      "  This means 1440 blocks across all 60 SMs\n",
-      "  But your tests show only 1 block executing at a time...\n",
-      "  → The bottleneck is NOT resource constraints!\n",
-      "======================================================================\n",
-      "OVERLAP KERNEL ATTRIBUTES\n",
-      "======================================================================\n",
-      "  num_regs             = 122\n",
-      "  local_size_bytes     = 1824  # per-thread stack/local\n",
-      "  shared_size_bytes    = 0\n",
-      "  max_threads_per_block= 512\n",
-      "\n",
-      "======================================================================\n",
-      "DEVICE PROPERTIES\n",
-      "======================================================================\n",
-      "  name                       = NVIDIA GeForce RTX 4070 Ti\n",
-      "  multiprocessor_count       = 60\n",
-      "  maxThreadsPerBlock         = 1024\n",
-      "  maxThreadsPerSM            = 1536\n",
-      "  maxBlocksPerSM             = 24\n",
-      "  regsPerSM                  = 65536\n",
-      "  warpSize                   = 32\n",
-      "\n",
-      "======================================================================\n",
-      "OCCUPANCY ANALYSIS\n",
-      "======================================================================\n",
-      "\n",
-      "Per-thread resources:\n",
-      "  Registers: 122\n",
-      "  Local memory: 1824 bytes\n",
-      "\n",
-      "Threads/Block   Blocks/SM       Active Threads/SM    Limiting Factor\n",
-      "--------------------------------------------------------------------------------\n",
-      "20              24              480                  HW block limit\n",
-      "40              13              520                  registers\n",
-      "80              6               480                  registers\n",
-      "128             4               512                  registers\n",
-      "256             2               512                  registers\n",
-      "512             1               512                  registers\n",
-      "1024            0               0                    registers\n",
-      "\n",
-      "======================================================================\n",
-      "ACTUAL USAGE IN overlap_multi_ensemble\n",
-      "======================================================================\n",
-      "\n",
-      "Configuration: 5 trees/ensemble × 4 threads/tree = 20 threads/block\n",
-      "\n",
-      "Per-block resource usage:\n",
-      "  Registers: 2440 (3.7% of SM)\n",
-      "  Local memory: 36,480 bytes (35.6 KB)\n",
-      "\n",
-      "Occupancy limits:\n",
-      "  Blocks limited by registers: 26\n",
-      "  Blocks limited by threads: 76\n",
-      "  Blocks limited by HW: 24\n",
-      "  ACTUAL max blocks per SM: 24\n",
-      "  ACTUAL active threads per SM: 480\n",
-      "  Occupancy: 31.2%\n",
-      "\n",
-      "======================================================================\n",
-      "CONCLUSION\n",
-      "======================================================================\n",
-      "✓ GPU SHOULD support 24 concurrent blocks per SM\n",
-      "  This means 1440 blocks across all 60 SMs\n",
-      "  But your tests show only 1 block executing at a time...\n",
-      "  → The bottleneck is NOT resource constraints!\n"
+      "stop final relax at some point\n"
      ]
     }
    ],
@@ -147,136 +24,77 @@
     "from cupy.cuda import runtime\n",
     "import pack_cuda\n",
     "\n",
-    "# Initialize pack_cuda to compile the kernel\n",
-    "pack_cuda.USE_FLOAT32 = False\n",
-    "pack_cuda._ensure_initialized()\n",
-    "\n",
-    "# Get the compiled kernel\n",
-    "kernel = pack_cuda._multi_overlap_list_total_kernel\n",
-    "\n",
-    "# 2. Inspect kernel attributes (per-thread stack/local memory, registers, etc.)\n",
-    "attrs = kernel.attributes  # dict\n",
-    "print(\"=\" * 70)\n",
-    "print(\"OVERLAP KERNEL ATTRIBUTES\")\n",
-    "print(\"=\" * 70)\n",
-    "print(f\"  num_regs             = {attrs.get('num_regs')}\")\n",
-    "print(f\"  local_size_bytes     = {attrs.get('local_size_bytes')}  # per-thread stack/local\")\n",
-    "print(f\"  shared_size_bytes    = {attrs.get('shared_size_bytes')}\")\n",
-    "print(f\"  max_threads_per_block= {attrs.get('max_threads_per_block')}\")\n",
-    "\n",
-    "# 3. Get device and device properties\n",
-    "dev = cp.cuda.Device()        # current device\n",
-    "dev_id = dev.id\n",
-    "props = runtime.getDeviceProperties(dev_id)\n",
-    "\n",
-    "name = props[\"name\"].decode(\"utf-8\", errors=\"ignore\")\n",
-    "multi_processor_count = props[\"multiProcessorCount\"]\n",
-    "max_threads_per_block = props[\"maxThreadsPerBlock\"]\n",
-    "warp_size = props[\"warpSize\"]\n",
-    "max_threads_per_sm = props.get(\"maxThreadsPerMultiProcessor\", 1536)\n",
-    "max_blocks_per_sm = props.get(\"maxBlocksPerMultiProcessor\", 24)\n",
-    "regs_per_sm = props.get(\"regsPerMultiprocessor\", 65536)\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 70)\n",
-    "print(\"DEVICE PROPERTIES\")\n",
-    "print(\"=\" * 70)\n",
-    "print(f\"  name                       = {name}\")\n",
-    "print(f\"  multiprocessor_count       = {multi_processor_count}\")\n",
-    "print(f\"  maxThreadsPerBlock         = {max_threads_per_block}\")\n",
-    "print(f\"  maxThreadsPerSM            = {max_threads_per_sm}\")\n",
-    "print(f\"  maxBlocksPerSM             = {max_blocks_per_sm}\")\n",
-    "print(f\"  regsPerSM                  = {regs_per_sm}\")\n",
-    "print(f\"  warpSize                   = {warp_size}\")\n",
-    "\n",
-    "# 4. Occupancy analysis for various block sizes\n",
-    "print(\"\\n\" + \"=\" * 70)\n",
-    "print(\"OCCUPANCY ANALYSIS\")\n",
-    "print(\"=\" * 70)\n",
-    "\n",
-    "num_regs = attrs.get('num_regs', 64)\n",
-    "local_mem = attrs.get('local_size_bytes', 1104)\n",
-    "\n",
-    "print(f\"\\nPer-thread resources:\")\n",
-    "print(f\"  Registers: {num_regs}\")\n",
-    "print(f\"  Local memory: {local_mem} bytes\")\n",
-    "\n",
-    "test_block_sizes = [20, 40, 80, 128, 256, 512, 1024]\n",
-    "\n",
-    "print(f\"\\n{'Threads/Block':<15} {'Blocks/SM':<15} {'Active Threads/SM':<20} {'Limiting Factor'}\")\n",
-    "print(\"-\" * 80)\n",
-    "\n",
-    "for block_size in test_block_sizes:\n",
-    "    # Calculate limits\n",
-    "    regs_per_block = num_regs * block_size\n",
-    "    blocks_by_regs = regs_per_sm // regs_per_block if regs_per_block > 0 else 999\n",
-    "    blocks_by_threads = max_threads_per_sm // block_size\n",
-    "    blocks_by_hw = max_blocks_per_sm\n",
-    "    \n",
-    "    max_blocks = min(blocks_by_regs, blocks_by_threads, blocks_by_hw)\n",
-    "    active_threads = max_blocks * block_size\n",
-    "    \n",
-    "    # Determine limiting factor\n",
-    "    if max_blocks == blocks_by_regs:\n",
-    "        limiting = \"registers\"\n",
-    "    elif max_blocks == blocks_by_threads:\n",
-    "        limiting = \"thread count\"\n",
-    "    else:\n",
-    "        limiting = \"HW block limit\"\n",
-    "    \n",
-    "    print(f\"{block_size:<15} {max_blocks:<15} {active_threads:<20} {limiting}\")\n",
-    "\n",
-    "# 5. Test with actual kernel configuration from overlap_multi_ensemble\n",
-    "print(\"\\n\" + \"=\" * 70)\n",
-    "print(\"ACTUAL USAGE IN overlap_multi_ensemble\")\n",
-    "print(\"=\" * 70)\n",
-    "\n",
-    "# Typical usage: 5 trees per ensemble, 4 threads per tree = 20 threads\n",
-    "n_trees = 5\n",
-    "threads_per_block_actual = n_trees * 4\n",
-    "regs_per_block_actual = num_regs * threads_per_block_actual\n",
-    "local_mem_per_block = local_mem * threads_per_block_actual\n",
-    "\n",
-    "blocks_by_regs_actual = regs_per_sm // regs_per_block_actual\n",
-    "blocks_by_threads_actual = max_threads_per_sm // threads_per_block_actual\n",
-    "blocks_by_hw_actual = max_blocks_per_sm\n",
-    "\n",
-    "max_blocks_actual = min(blocks_by_regs_actual, blocks_by_threads_actual, blocks_by_hw_actual)\n",
-    "\n",
-    "print(f\"\\nConfiguration: {n_trees} trees/ensemble × 4 threads/tree = {threads_per_block_actual} threads/block\")\n",
-    "print(f\"\\nPer-block resource usage:\")\n",
-    "print(f\"  Registers: {regs_per_block_actual} ({100*regs_per_block_actual/regs_per_sm:.1f}% of SM)\")\n",
-    "print(f\"  Local memory: {local_mem_per_block:,} bytes ({local_mem_per_block/1024:.1f} KB)\")\n",
-    "print(f\"\\nOccupancy limits:\")\n",
-    "print(f\"  Blocks limited by registers: {blocks_by_regs_actual}\")\n",
-    "print(f\"  Blocks limited by threads: {blocks_by_threads_actual}\")\n",
-    "print(f\"  Blocks limited by HW: {blocks_by_hw_actual}\")\n",
-    "print(f\"  ACTUAL max blocks per SM: {max_blocks_actual}\")\n",
-    "print(f\"  ACTUAL active threads per SM: {max_blocks_actual * threads_per_block_actual}\")\n",
-    "print(f\"  Occupancy: {100 * (max_blocks_actual * threads_per_block_actual) / max_threads_per_sm:.1f}%\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 70)\n",
-    "print(\"CONCLUSION\")\n",
-    "print(\"=\" * 70)\n",
-    "if max_blocks_actual >= 2:\n",
-    "    print(f\"✓ GPU SHOULD support {max_blocks_actual} concurrent blocks per SM\")\n",
-    "    print(f\"  This means {max_blocks_actual * multi_processor_count} blocks across all {multi_processor_count} SMs\")\n",
-    "    print(f\"  But your tests show only 1 block executing at a time...\")\n",
-    "    print(f\"  → The bottleneck is NOT resource constraints!\")\n",
-    "else:\n",
-    "    print(f\"✗ GPU can only run 1 block per SM due to resource limits\")\n",
-    "    print(f\"  Limited by: \", end=\"\")\n",
-    "    if max_blocks_actual == blocks_by_regs_actual:\n",
-    "        print(\"registers\")\n",
-    "    elif max_blocks_actual == blocks_by_threads_actual:\n",
-    "        print(\"thread count\")\n",
-    "    else:\n",
-    "        print(\"HW block limit\")"
+    "import kaggle_support as kgs\n",
+    "a=kgs.dill_load(kgs.temp_dir + 'res0.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4485d30f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 3, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.populations[0].configuration.xyt.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f5d64e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8101964321868308"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kgs.tree_area/0.30316722"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4abf4d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.633444000000004"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.30316722*200"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4485d30f",
+   "id": "e946a54b",
    "metadata": {},
    "outputs": [],
    "source": []
