--- a/analysis/test_ga_periodic_fixed.ipynb
+++ b/analysis/test_ga_periodic_fixed.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5a6eda5a",
    "metadata": {},
    "outputs": [],
@@ -904,37 +904,8 @@
     "pop = res_pop[0]\n",
     "for r in res_pop[1:]:\n",
     "    pop.merge(r)\n",
-    "kgs.dill_save(kgs.code_dir + '/../res/packings.pickle', pop)"
+    "kgs.dill_save(kgs.code_dir + '../res/packings.pickle', pop)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5c25bec4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/packing/code/core/'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kgs.code_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c62e787-4d42-4471-a6f9-7d16e4664683",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
