First batched Cupy LBFGS

--- a/analysis/test_bfgs.ipynb
+++ b/analysis/test_bfgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "539b4a6a",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "np.float64(0.35650769640692814)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d01beacc",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "(np.float64(0.3429463469907569), array([0.19435233]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "960ef704",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[77]\u001b[39m\u001b[32m, line 46\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;66;03m#print(sol_tmp.h[0,0].get()**2/sol_tmp.N_trees, cost.compute_cost_allocate(sol_tmp)[0], cost.costs[2].compute_cost_allocate(sol_tmp)[0])\u001b[39;00m\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_io\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m46\u001b[39m xx=\u001b[43mpack_io\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolution_list_to_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43msol_opt\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 46\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;66;03m#print(sol_tmp.h[0,0].get()**2/sol_tmp.N_trees, cost.compute_cost_allocate(sol_tmp)[0], cost.costs[2].compute_cost_allocate(sol_tmp)[0])\u001b[39;00m\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_io\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m46\u001b[39m xx=\u001b[43mpack_io\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolution_list_to_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43msol_opt\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_io.py:63\u001b[39m, in \u001b[36msolution_list_to_dataframe\u001b[39m\u001b[34m(sol_list, compact)\u001b[39m\n\u001b[32m     60\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mboolean_line_search\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m63\u001b[39m factor = \u001b[43mboolean_line_search\u001b[49m\u001b[43m.\u001b[49m\u001b[43mboolean_line_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1.1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     64\u001b[39m \u001b[38;5;66;03m#print(sol.N_trees, factor)\u001b[39;00m\n\u001b[32m     65\u001b[39m submission[\u001b[33m'\u001b[39m\u001b[33mx\u001b[39m\u001b[33m'\u001b[39m] *= factor\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/boolean_line_search.py:11\u001b[39m, in \u001b[36mboolean_line_search\u001b[39m\u001b[34m(f, lo, hi, max_iter, tol)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[33;03mGeneric binary search for smallest value in [lo, hi] where f(x) is False,\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[33;03massuming f(lo) == True and f(hi) == False, and f is monotonic.\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[33;03mReturns the value in [lo, hi] where f(x) transitions from True to False.\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m f(lo)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m f(hi)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(max_iter):\n\u001b[32m     13\u001b[39m     mid = (hi + lo) / \u001b[32m2.0\u001b[39m\n",
       "\u001b[31mAssertionError\u001b[39m: "
@@ -286,29 +286,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "0cd0a5f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext pyinstrument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "441926f8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BoundaryDistanceCost(comment='', scaling=1.0, use_kernel=True)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%pyinstrument` not found.\n"
+     ]
     }
    ],
    "source": [
-    "cost.costs[1]"
+    "%%pyinstrument\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_probability as tfp\n",
+    "import cupy as cp\n",
+    "\n",
+    "sol_to_solve = copy.deepcopy(sol)\n",
+    "sol_to_solve.select_ids([1]*1)\n",
+    "\n",
+    "sol_tmp = copy.deepcopy(sol_to_solve)\n",
+    "sol_tmp.xyt += cp.array(np.random.default_rng(seed=42).normal(0,0.01,sol_tmp.xyt.shape))\n",
+    "\n",
+    "x0 = cp.concatenate((sol_tmp.xyt.reshape(sol_tmp.N_solutions,-1), sol_tmp.h.reshape(sol_tmp.N_solutions,-1)),axis=1).get()\n",
+    "\n",
+    "tmp_grad = cp.zeros_like(sol_tmp.xyt)\n",
+    "tmp_grad_h = cp.zeros_like(sol_tmp.h)\n",
+    "tmp_cost= cp.zeros(sol_tmp.N_solutions, dtype=kgs.dtype_cp)\n",
+    "\n",
+    "counter = 0\n",
+    "\n",
+    "cost = pack_ga.GA().fine_relaxers[0].cost\n",
+    "\n",
+    "def f_batched(x):\n",
+    "    global counter\n",
+    "    counter += 1\n",
+    "    x=cp.array(x)\n",
+    "    global sol_tmp\n",
+    "    NN = sol_tmp.N_trees*3\n",
+    "    sol_tmp.xyt[...] = x[:,:NN].reshape(sol_tmp.xyt.shape)\n",
+    "    sol_tmp.h[...] = x[:,NN:].reshape(sol_tmp.h.shape)\n",
+    "    cost.compute_cost(sol_tmp, tmp_cost, tmp_grad, tmp_grad_h)\n",
+    "    res = cp.zeros_like(x)\n",
+    "    res[:,:NN] = tmp_grad.reshape(sol_tmp.N_solutions,-1)\n",
+    "    res[:,NN:] = tmp_grad_h.reshape(sol_tmp.N_solutions,-1)\n",
+    "    return tmp_cost.get(), res.get()\n",
+    "\n",
+    "def make_tfp_bfgs_from_cupy(f_cupy, M: int, N: int, dtype=tf.float64):\n",
+    "    \"\"\"\n",
+    "    f_cupy: callable(x_cp[M,N]) -> (cost_cp[M], grad_cp[M,N])\n",
+    "            both are CuPy arrays.\n",
+    "    Returns: value_and_gradients_function(position_tf) suitable for tfp.optimizer.bfgs_minimize.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def value_and_grad_tf(position_tf):\n",
+    "        position_tf = tf.cast(position_tf, dtype)\n",
+    "\n",
+    "        def _py_eval(x_np):\n",
+    "            # x_np is a NumPy array on host because tf.py_function passes host arrays.\n",
+    "            # We move it to CuPy, run f, then bring results back to NumPy for TF.\n",
+    "            x_cp = cp.asarray(x_np)#.reshape(M,N)\n",
+    "            cost_cp, grad_cp = f_cupy(x_cp)\n",
+    "\n",
+    "            # Ensure correct dtypes\n",
+    "            cost_cp = cost_cp.astype(cp.float64 if dtype == tf.float64 else cp.float32)\n",
+    "            grad_cp = grad_cp.astype(cp.float64 if dtype == tf.float64 else cp.float32)\n",
+    "\n",
+    "            # Back to NumPy (this is a device->host transfer)\n",
+    "            return (cp.asnumpy(cost_cp), cp.asnumpy(grad_cp))\n",
+    "\n",
+    "        cost_tf, grad_tf = tf.py_function(\n",
+    "            func=_py_eval,\n",
+    "            inp=[position_tf],\n",
+    "            Tout=[dtype, dtype],\n",
+    "        )\n",
+    "\n",
+    "        # Tell TF the shapes (py_function erases shape info)\n",
+    "        #cost_tf.set_shape([M])\n",
+    "        #grad_tf.set_shape([M, N])\n",
+    "\n",
+    "        return cost_tf, grad_tf\n",
+    "\n",
+    "    return value_and_grad_tf\n",
+    "\n",
+    "kgs.debugging_mode = 2\n",
+    "value_and_grad = make_tfp_bfgs_from_cupy(f_batched, M=sol_tmp.N_solutions, N=x0.shape[1], dtype=kgs.dtype_np)\n",
+    "\n",
+    "x0_tf = tf.convert_to_tensor(x0, dtype=kgs.dtype_np)\n",
+    "x0_tf = tf.convert_to_tensor(x0, dtype=tf.float64)\n",
+    "\n",
+    "results = tfp.optimizer.bfgs_minimize(\n",
+    "    value_and_gradients_function=value_and_grad,\n",
+    "    initial_position=x0_tf,\n",
+    "    tolerance=1e-2,\n",
+    "    max_iterations=5000,\n",
+    "    #max_line_search_iterations=200\n",
+    "    #parallel_iterations=1,  # keep Python callback manageable\n",
+    ")\n",
+    "\n",
+    "x_result = cp.array(results.position.numpy())\n",
+    "sol_opt = copy.deepcopy(sol_to_solve)\n",
+    "NN = sol_opt.N_trees*3\n",
+    "sol_opt.xyt[...] = x_result[:,:NN].reshape(sol_opt.xyt.shape)\n",
+    "sol_opt.h[...] = x_result[:,NN:].reshape(sol_opt.h.shape)    \n",
+    "counter, cost.compute_cost_allocate(sol_opt)[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "388df978",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x0_tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m cost[\u001b[32m0\u001b[39m], grad[\u001b[32m0\u001b[39m]\n\u001b[32m      6\u001b[39m counter = \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m x0 = \u001b[43mx0_tf\u001b[49m.numpy()\n\u001b[32m      9\u001b[39m x0 = x0.ravel()\n\u001b[32m     10\u001b[39m res = scipy.optimize.minimize(f, x0, method=\u001b[33m'\u001b[39m\u001b[33mL-BFGS-B\u001b[39m\u001b[33m'\u001b[39m, jac=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m     11\u001b[39m                                 options={\u001b[33m'\u001b[39m\u001b[33mmaxiter\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m5000\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mgtol\u001b[39m\u001b[33m'\u001b[39m:\u001b[32m1e-3\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mnorm\u001b[39m\u001b[33m'\u001b[39m:np.inf, \u001b[33m'\u001b[39m\u001b[33mxrtol\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m0\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdisp\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[33m'\u001b[39m\u001b[33mmaxcor\u001b[39m\u001b[33m'\u001b[39m:\u001b[32m3\u001b[39m})\n",
+      "\u001b[31mNameError\u001b[39m: name 'x0_tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.optimize\n",
+    "def f(x):\n",
+    "    cost, grad = f_batched(x[None])\n",
+    "    return cost[0], grad[0]\n",
+    "\n",
+    "counter = 0\n",
+    "\n",
+    "x0 = x0_tf.numpy()\n",
+    "x0 = x0.ravel()\n",
+    "res = scipy.optimize.minimize(f, x0, method='L-BFGS-B', jac=True,\n",
+    "                                options={'maxiter': 5000, 'gtol':1e-3, 'norm':np.inf, 'xrtol': 0, 'disp': True, 'maxcor':3})\n",
+    "\n",
+    "x_result = cp.array(res.x.reshape(1,-1))\n",
+    "sol_opt = copy.deepcopy(sol_to_solve)\n",
+    "NN = sol_opt.N_trees*3\n",
+    "sol_opt.xyt[...] = x_result[:,:NN].reshape(sol_opt.xyt.shape)\n",
+    "sol_opt.h[...] = x_result[:,NN:].reshape(sol_opt.h.shape)    \n",
+    "counter, cost.compute_cost_allocate(sol_opt)[0].get().item()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8f3d7393",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (10, 10) (10, 171)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 34\u001b[39m\n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m tmp_cost, res\n\u001b[32m     32\u001b[39m kgs.debugging_mode = \u001b[32m2\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m results = \u001b[43mbfgs_cupy\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlbfgs_minimize_batched_cupy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[43m    \u001b[49m\u001b[43mf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mf_batched\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m    \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m=\u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgtol\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1e-2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     38\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmax_iter\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m5000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     39\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#max_line_search_iterations=200\u001b[39;49;00m\n\u001b[32m     40\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#parallel_iterations=1,  # keep Python callback manageable\u001b[39;49;00m\n\u001b[32m     41\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     43\u001b[39m results\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/bfgs_cupy.py:198\u001b[39m, in \u001b[36mlbfgs_minimize_batched_cupy\u001b[39m\u001b[34m(f, x0, max_iter, gtol, m_hist, line_search_max, c1, tau, alpha0, min_alpha, use_powell_damping, reset_on_failure)\u001b[39m\n\u001b[32m    194\u001b[39m active = ~converged  \u001b[38;5;66;03m# [M]\u001b[39;00m\n\u001b[32m    195\u001b[39m \u001b[38;5;66;03m# Still must call f on full batch later per your constraint; we *mask updates only*.\u001b[39;00m\n\u001b[32m    196\u001b[39m \n\u001b[32m    197\u001b[39m \u001b[38;5;66;03m# Direction p (compute for all, but it will be ignored for converged runs)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m198\u001b[39m p = \u001b[43mtwo_loop_direction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrad\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactive\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    200\u001b[39m \u001b[38;5;66;03m# Ensure descent direction for active runs; if not, fall back to steepest descent.\u001b[39;00m\n\u001b[32m    201\u001b[39m gp = cp.sum(grad * p, axis=\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# [M]\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/bfgs_cupy.py:92\u001b[39m, in \u001b[36mlbfgs_minimize_batched_cupy.<locals>.two_loop_direction\u001b[39m\u001b[34m(g, active_mask)\u001b[39m\n\u001b[32m     90\u001b[39m \u001b[38;5;66;03m# dot(s, q)\u001b[39;00m\n\u001b[32m     91\u001b[39m sq = cp.sum(s * q, axis=\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# [M]\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m92\u001b[39m a = \u001b[43mrho\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43msq\u001b[49m\n\u001b[32m     93\u001b[39m alpha[:, t] = a\n\u001b[32m     95\u001b[39m \u001b[38;5;66;03m# q = q - a*y   (masked)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/core.pyx:1387\u001b[39m, in \u001b[36mcupy._core.core._ndarray_base.__mul__\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/_kernel.pyx:1314\u001b[39m, in \u001b[36mcupy._core._kernel.ufunc.__call__\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mcupy/_core/internal.pyx:381\u001b[39m, in \u001b[36mcupy._core.internal._broadcast_core\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: operands could not be broadcast together with shapes (10, 10) (10, 171)"
+     ]
+    }
+   ],
+   "source": [
+    "import bfgs_cupy\n",
+    "\n",
+    "sol_to_solve = copy.deepcopy(sol)\n",
+    "sol_to_solve.select_ids([1]*10)\n",
+    "\n",
+    "sol_tmp = copy.deepcopy(sol_to_solve)\n",
+    "sol_tmp.xyt += cp.array(np.random.default_rng(seed=42).normal(0,0.01,sol_tmp.xyt.shape))\n",
+    "\n",
+    "x0 = cp.concatenate((sol_tmp.xyt.reshape(sol_tmp.N_solutions,-1), sol_tmp.h.reshape(sol_tmp.N_solutions,-1)),axis=1).get()\n",
+    "\n",
+    "tmp_grad = cp.zeros_like(sol_tmp.xyt)\n",
+    "tmp_grad_h = cp.zeros_like(sol_tmp.h)\n",
+    "tmp_cost= cp.zeros(sol_tmp.N_solutions, dtype=kgs.dtype_cp)\n",
+    "\n",
+    "counter = 0\n",
+    "\n",
+    "cost = pack_ga.GA().fine_relaxers[0].cost\n",
+    "\n",
+    "def f_batched(x):\n",
+    "    global counter\n",
+    "    counter += 1\n",
+    "    global sol_tmp\n",
+    "    NN = sol_tmp.N_trees*3\n",
+    "    sol_tmp.xyt[...] = x[:,:NN].reshape(sol_tmp.xyt.shape)\n",
+    "    sol_tmp.h[...] = x[:,NN:].reshape(sol_tmp.h.shape)\n",
+    "    cost.compute_cost(sol_tmp, tmp_cost, tmp_grad, tmp_grad_h)\n",
+    "    res = cp.zeros_like(x)\n",
+    "    res[:,:NN] = tmp_grad.reshape(sol_tmp.N_solutions,-1)\n",
+    "    res[:,NN:] = tmp_grad_h.reshape(sol_tmp.N_solutions,-1)\n",
+    "    return tmp_cost, res\n",
+    "\n",
+    "kgs.debugging_mode = 2\n",
+    "\n",
+    "results = bfgs_cupy.lbfgs_minimize_batched_cupy(\n",
+    "    f=f_batched,\n",
+    "    x0=x0,\n",
+    "    gtol=1e-2,\n",
+    "    max_iter=5000,\n",
+    "    #max_line_search_iterations=200\n",
+    "    #parallel_iterations=1,  # keep Python callback manageable\n",
+    ")\n",
+    "\n",
+    "results\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "441926f8",
+   "id": "28d1c958",
    "metadata": {},
    "outputs": [],
    "source": []
